// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
<div
  class="StyledGrommet-gGRXwz hSKpsq"
>
  <div
    class="StyledBox-bStriS gQTNhE"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs eprEGd"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs byZsnf"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS gQTNhE"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs laXbkr"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs lbHWeo"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS gQTNhE"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs jLKFth"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs fESZOr"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS gQTNhE"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs epoBrO"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bmUrZC"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS bBXCcb"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs eOlRTu"
        direction="column"
      />
      <div
        class="StyledBox-bStriS hsWcIa"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
<div
  class="StyledGrommet-gGRXwz hSKpsq"
/>
`;

exports[`Distribution values renders 1`] = `
<div
  class="StyledGrommet-gGRXwz hSKpsq"
>
  <div
    class="StyledBox-bStriS gQTNhE"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS iUsjod"
      direction="column"
      overflow="hidden"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs eprEGd"
      direction="row"
    />
    <div
      class="StyledBox-bStriS bWrCtE"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS bmUrZC"
        direction="column"
        overflow="hidden"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs byZsnf"
        direction="column"
      />
      <div
        class="StyledBox-bStriS okMhX"
        direction="row"
        overflow="hidden"
      >
        <div
          class="StyledBox-bStriS bBXCcb"
          direction="column"
          overflow="hidden"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="StyledBox__StyledBoxGap-ixLlSs eprEGd"
          direction="row"
        />
        <div
          class="StyledBox-bStriS hsWcIa"
          direction="column"
          overflow="hidden"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
